--- a/firefox/EGIS-Consulting.html
+++ b/firefox/EGIS-Consulting.html
@@ -235,7 +235,7 @@
             </div>
           </div>
         </div>
-        <p class="u-align-left u-text u-text-2">EGIS Consulting started in 2022, and in its inception was envioned as a GIS global Consulting company. It also aims to provide economics research services to Latin America, Asia and other markets. With greater demand and standards, we strive to satisfy our clients' goals.&nbsp;</p>
+        <p class="u-align-left u-text u-text-2">EGIS Consulting started in 2022, and in its inception was envisioned as a GIS global Consulting company. It also aims to provide economics research services to Latin America, Asia and other markets. With greater demand and standards, we strive to satisfy our clients' goals.&nbsp;</p>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-6" id="carousel_024f">
